# docling-RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: phase1_questions_aligned.jsonl
data/qdrant_data/: meta.json
data/qdrant_data/collection/docling/: storage.sqlite
data/qdrant_data/collection/docling_text/: storage.sqlite
data/qdrant_data/collection/docling_visual/: storage.sqlite
results/: chunks_small.jsonl  chunks_small_v2.jsonl  results_phase1_agent.jsonl  results_phase1_direct.jsonl  results_small.jsonl  results_small_v2.jsonl  results_small_v3.jsonl
scripts/: benchmark_runner.py  docling_config.py  docling_loader.py  docling_rag_agent.py  docling_rag_core.py  docling_tools.py  inspect_qdrant.py  rag_contract.py  vlm.py
